# OneClickOneLauncher

./: ARCHITECTURE.md  DECOUPLING_SUMMARY.md  GUI.md  flake.nix  patch_and_launch.py  patch_and_launch.spec  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build-oneclick-decoupled.yml  build-oneclick.yml  build.yml
oneclick_launcher/: .gitignore  DECOUPLING.md  README.md  config.py  launcher.py  patch.py  patch_and_launch.py  pyproject.toml  standalone.spec  standalone_patch_and_launch.py
src/onelauncher/: __about__.py  addon_manager.py  async_utils.py  cli.py  config_manager.py  game_account_config.py  game_config.py  logs.py  main_window.py  program_config.py  resources.py  settings_window.py  setup_wizard.py  utilities.py
src/onelauncher/network/: world.py
src/onelauncher/ui/: custom_widgets.py
tests/onelauncher/: test_config_manager.py
