[project]
name = "oneclick-launcher"
version = "1.0.0"
description = "Lightweight patch and launch utility for LOTRO"
authors = [{ name = "June Stepp", email = "contact@junestepp.me" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    "platformdirs>=4.2.2",
    "defusedxml>=0.7.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]